# KIFT

./: ._know_path.py  .gitignore  CMakeLists.txt  Makefile  README.md  Untitled  author  clean_all.py  client.py  client_test.py  know_path.py  main.c  output.pcm  output1.pcm  run_all.py  server.py  toto.pcm  trainer.py  turnoff_server.py  val_sup.txt
commands_log/: .command_1.wav.swo  output.pcm
history/: logs
model/en-us-adapt/: mixture_weights
outgoing/: 11251497397563
src/bla_src/: kift.h  main.c
src/lib/: Makefile
src/project/: kift.h
src/project/client_src/: main.c
src/project/server_src/: main.c
src/project/shared_src/: Makefile  ft_debug.c
src/server_src/: server.py
src/server_src/_model/en-us-adapt/: mixture_weights
src/server_src/model/: cmudict-en-us.dict  commands.txt
src/server_src/model/commands/: 9800.log_pronounce  9800.sent  9800.vocab  dic.dic  lm.lm
src/server_src/model/en-us-adapt/: mixture_weights  sendump  transition_matrices
src/server_src/myserver/: __init__.py  alarm.py  badinput.py  check_port.py  handler.py  history.py  parser.py  print_usage.py  setdate.py  text2int.py  webserver.py
src/server_src/scripts/: allParser.py  numParser.py
src/server_src/static/: ._materialize.css  ._materialize.js  ._roboto  app.css  app.js  materialize.css  recorder.js
src/server_src/templates/: upload.html
static/: ._file.js  app.css  app.js  app1.js  file.js  recorder.js
temp/: KIFT_cheatsheet.rtf  text_to_voice.py
temp/leaks/: suppressions.sh
templates/: upload.html
train/: text.fileids  text.transcription
train2/: old.transcription  trainer2.py
trainer/: trainer.py  trainer2.py
trainer/train/: text.transcription
